infra/k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: citizen-alert-backend
  namespace: citizen-alert-prod
  labels:
    app: citizen-alert-backend
spec:
  replicas: 4
  selector:
    matchLabels:
      app: citizen-alert-backend
  template:
    metadata:
      labels:
        app: citizen-alert-backend
    spec:
      containers:
        - name: backend
          image: ghcr.io/safety-gov-gh/citizen-alert-backend:v1.0.0
          ports:
            - containerPort: 4000
          resources:
            requests:
              cpu: "500m"
              memory: "1Gi"
            limits:
              cpu: "2000m"
              memory: "4Gi"
          readinessProbe:
            httpGet:
              path: /v1/incidents
              port: 4000
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /v1/incidents
              port: 4000
            initialDelaySeconds: 15
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: citizen-alert-backend-svc
  namespace: citizen-alert-prod
spec:
  type: ClusterIP
  selector:
    app: citizen-alert-backend
  ports:
    - port: 4000
      targetPort: 4000
